tests/language_modules/09_statements/invalid_semantics/check_requires_boolean.vf
module CheckRequiresBoolean

procedure main()
is
    check 1
end main

end CheckRequiresBoolean